--- a/templates/edit.html
+++ b/templates/edit.html
@@ -7,8 +7,8 @@
 <body>
     <h1>Add a Student</h1>
     <form action="/add" method="post">\
-        <input name="student_name" placeholder="name">
-        <input name="student_year" placeholder="year">
+        <input name="new_name" placeholder="name">
+        <input name="new_year" placeholder="year">
         <br>
         <input type="submit" value="Submit">
     </form>
