--- a/templates/student.html
+++ b/templates/student.html
@@ -11,7 +11,9 @@
 	Class: {{student.year}}<br>
 	Finished Lab: {{student.finished_lab}}
 	</p>
-    <p><a href="{{url_for('home')}}">Home</a></p>
+	<form action="/delete/{{student.student_id}}" method="post">
+        <input type="submit" value="delete">
+    </form>
 
 </body>
 </html>
